Updated Neural_Network Class

--- a/PredictTestScore/PredictTestScore/PredictTestScore.vcxproj.filters
+++ b/PredictTestScore/PredictTestScore/PredictTestScore.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Neural_Network.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Neural_Network.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
