--- a/PredictTestScore/PredictTestScore/PredictTestScore.vcxproj
+++ b/PredictTestScore/PredictTestScore/PredictTestScore.vcxproj
@@ -147,6 +147,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Neural_Network.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Neural_Network.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
